--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "15.3.2",
-    "react-native": "0.36.0"
+    "react-native": "0.36.0",
+    "react-native-filesystem": "../"
   },
   "jest": {
     "preset": "jest-react-native"
