--- a/tests/ios/RNFileSystemTests.xcodeproj/xcshareddata/xcschemes/RNFileSystemTests.xcscheme
+++ b/tests/ios/RNFileSystemTests.xcodeproj/xcshareddata/xcschemes/RNFileSystemTests.xcscheme
@@ -29,26 +29,36 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "RNFileSystemTestsTests.xctest"
-               BlueprintName = "RNFileSystemTestsTests"
+               BuildableName = "RNFileSystemUnitTests.xctest"
+               BlueprintName = "RNFileSystemUnitTests"
                ReferencedContainer = "container:RNFileSystemTests.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "RNFileSystemTestsTests.xctest"
-               BlueprintName = "RNFileSystemTestsTests"
+               BuildableName = "RNFileSystemUnitTests.xctest"
+               BlueprintName = "RNFileSystemUnitTests"
+               ReferencedContainer = "container:RNFileSystemTests.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "25B7DF3B1DC1EAC300A39DC4"
+               BuildableName = "RNFileSystemIntegrationTests.xctest"
+               BlueprintName = "RNFileSystemIntegrationTests"
                ReferencedContainer = "container:RNFileSystemTests.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -62,15 +72,18 @@
             ReferencedContainer = "container:RNFileSystemTests.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
@@ -86,10 +99,10 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
