Added unit- and integration tests for Android.

--- a/tests/android/settings.gradle
+++ b/tests/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'RNFileSystemTests'
 
 include ':app'
+include ':react-native-filesystem'
+project(':react-native-filesystem').projectDir = new File(rootProject.projectDir, '../../android')
