--- a/tests/android/app/build.gradle
+++ b/tests/android/app/build.gradle
@@ -126,9 +126,11 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-filesystem')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    testCompile 'junit:junit:4.12'
 }
 
 // Run this once to be able to run the application with BUCK
