--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.rnfilesystem">
+          package="com.benwixen.rnfilesystem">
 
     <application android:fullBackupContent="@xml/rnfilesystem_backup_rules" />
     <uses-permission
