--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "react": ">=15.3.1",
     "react-native": ">=0.34"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "rnpm": {
+    "android": {
+      "sourceDir": "./android"
+    }
+  }
 }
